test/semantic_errors/invalid_assignment2.mc
void main() {
    int a;
    a = 'c'; /* cannot assign char to int */
}